[package]
name = "rust-burn-queuemetrics"
version = "0.1.0"
edition = "2021"
authors = ["Luigi Mario Zuccarelli <luigizuccarelli@gmail.com>"]

[dependencies]
burn = { version = "0.17.0", features = ["train", "vision"] }
burn-autodiff = "0.17.0"
burn-cuda = "0.17.0"
clap = { version = "4.5.41", features = ["derive"] }
indicatif = { version = "0.17.0-rc.11" }
csv = {version = "1.3.1"}
http = "1.3.1"
http-body-util = "0.1.3"
hyper = "1.6.0"
hyper-util = { version = "0.1.15", default-features = false, features = ["client-legacy","tokio", "server-auto" ] }  
rustls = {version = "0.23.29", default-features = false, features = ["std"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-rustls = "0.26.2"
url = "2.5.4"
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.2.0" }
hyper-tls = "0.6.0"
async-trait = "0.1.88"


[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization
